--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "style-loader": "^1.2.1"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "codemirror": "^5.59.4",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.1",
