--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
         }
       ],
       "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
+        {
+          "name": "@electron-forge/plugin-webpack",
+          "config": {
             "mainConfig": "./webpack.main.config.js",
             "renderer": {
               "config": "./webpack.renderer.config.js",
@@ -54,7 +54,7 @@
               ]
             }
           }
-        ]
+        }
       ]
     }
   },
