--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
               "entryPoints": [
                 {
                   "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
+                  "js": "./src/renderer.js",
                   "name": "main_window",
                   "preload": {
-                    "js": "./src/preload.ts"
+                    "js": "./src/preload.js"
                   }
                 }
               ]
